--- a/calendarstyle.css
+++ b/calendarstyle.css
@@ -1,3 +1,19 @@
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendarlogo-container {
+  width: 100%;
+  text-align: center;
+}
+
+.logo {
+  max-width: 100%;
+  height: auto;
+}
+
 body {
     font-family: 'Arial', sans-serif;
     background-image: url('winter.gif');
