--- a/calendarstyle.css
+++ b/calendarstyle.css
@@ -16,6 +16,47 @@ header {
     margin-bottom: 20px;
 }
 
+header {
+  position: relative;
+}
+
+.menu {
+  cursor: pointer;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 1000;
+}
+
+.nav-menu {
+  position: fixed;
+  top: 0;
+  right: -300px;
+  width: 300px;
+  height: 100vh;
+  background-color: #333;
+  transition: right 0.3s ease-in-out;
+}
+
+.nav-menu.active {
+  right: 0;
+}
+
+.nav-menu ul {
+  padding: 50px 0 0 0;
+  list-style: none;
+}
+
+.nav-menu ul li {
+  padding: 10px 40px;
+}
+
+.nav-menu ul li a {
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+}
+
 .calendarlogo-container {
     width: 100%;
     text-align: center;
