--- a/calendarstyle.css
+++ b/calendarstyle.css
@@ -18,11 +18,18 @@ header {
 }
 
 .menu {
-    cursor: pointer;
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 10px;
+    right: 10px;
+    max-width: 30px;    /* Set a maximum width */
+    max-height: 30px;   /* Set a maximum height */
     z-index: 1000;
+}
+
+.menu img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 .nav-menu {
