--- a/portfolio.css
+++ b/portfolio.css
@@ -72,11 +72,12 @@ header {
     height: 24px;
     position: absolute;
     top: 10px;
-    right: 10px;
+    left: 10px;  /* Change right: 10px to left: 10px */
     transition: transform 0.3s ease;
     cursor: pointer;
     z-index: 1001;
 }
+
 
 .menu:hover {
     transform: rotate(20deg);  /* Fixed syntax error */
@@ -88,20 +89,22 @@ header {
     object-fit: contain;
 }
 
-.nav-menu {
+nav-menu {
     position: fixed;
     top: 0;
-    right: -300px;
+    left: -300px;  /* Change right: -300px to left: -300px */
     width: 300px;
     height: 100vh;
-    background-color: rgba(51, 51, 51, 0.9);  /* Added some transparency */
-    transition: right 0.3s ease-in-out;
+    background-color: rgba(51, 51, 51, 0.9);
+    transition: left 0.3s ease-in-out;  /* Change transition property from right to left */
     z-index: 1000;
 }
 
-.nav-menu.active {
-    right: 0;
+
+nav-menu.active {
+    left: 0;  /* Change right: 0 to left: 0 */
 }
+
 
 .nav-menu ul {
     padding: 50px 0 0 0;
