--- a/portfolio.css
+++ b/portfolio.css
@@ -155,3 +155,92 @@ nav-menu.active {
          width: 90%;
         text-align: center;
     }
+
+
+
+    
+
+
+
+#contact {
+    background-color: #f4f4f4;
+    padding: 50px;
+    text-align: center;
+    font-family: Verdana;
+}
+
+#contact h2 {
+    color: #827070;
+    font-family: Verdana;
+    font-size: 2.5em;
+    margin-bottom: 20px;
+}
+
+#contactForm {
+    font-family: Verdana;
+    max-width: 600px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+#contactForm label {
+    font-size: 1.2em;
+    text-align: left;
+    font-family: Verdana;
+}
+
+#contactForm input, #contactForm textarea {
+    font-family: Verdana;
+    padding: 10px;
+    font-size: 1em;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 100%;
+}
+
+#contactForm button {
+    padding: 15px;
+    font-size: 1.2em;
+    font-family: Verdana;
+    background-color: #bcb2b2;
+    color: white;
+    border: none;
+    border-radius: 200px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+#contactForm button:hover {
+    background-color: #555;
+    font-family: Verdana;
+}
+
+@media screen and (max-width: 768px) {
+    #contact {
+        padding: 30px;
+    }
+
+    #contact h2 {
+        font-size: 2em;
+    }
+
+    #contactForm {
+        gap: 10px;
+    }
+
+    #contactForm label {
+        font-size: 1em;
+    }
+
+    #contactForm input, #contactForm textarea {
+        font-size: 0.9em;
+    }
+
+    #contactForm button {
+        font-size: 1em;
+        padding: 10px;
+    }
+}
+
