--- a/calendarstyle.css
+++ b/calendarstyle.css
@@ -33,12 +33,13 @@ header {
     height: auto;      /* Maintain aspect ratio */
 }
 
+
 .menu {
     width: 24px;
     height: 24px;
     position: absolute;
     top: 10px;
-    right: 10px;
+    left: 10px;  /* Change from right: 10px to left: 10px */
     transition: transform 0.3s ease;
     cursor: pointer;
     z-index: 1001;
@@ -49,30 +50,33 @@ header {
 }
 
 .menu img {
-    width: 80px;        /* Fixed from 1000% to 100% */
-    height: 80px;       /* Fixed from 90px to 100% */
+    width: 60px;        /* Fixed from 1000% to 100% */
+    height: 60px;       /* Fixed from 90px to 100% */
     object-fit: contain;
 }
+
 
 .nav-menu {
     position: fixed;
     top: 0;
-    right: -300px;
+    left: -300px;  /* Change from right: -300px to left: -300px */
     width: 300px;
     height: 100vh;
-    background-color: rgba(51, 51, 51, 0.9);  /* Added some transparency */
-    transition: right 0.3s ease-in-out;
+    background-color: rgba(211, 211, 211, 0.638);
+    transition: left 0.3s ease-in-out;  /* Change from right to left */
     z-index: 1000;
 }
 
 .nav-menu.active {
-    right: 0;
+    left: 0;  /* Change from right: 0 to left: 0 */
 }
+
+
+
 
 .nav-menu ul {
     padding: 50px 0 0 0;
     list-style: none;
-    margin: 0;
 }
 
 .nav-menu ul li {
@@ -80,11 +84,14 @@ header {
 }
 
 .nav-menu ul li a {
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+    font-size: xx-large;
+    font-stretch: expanded;
+    font-weight: bold;
     color: white;
     text-decoration: none;
     font-size: 18px;
 }
-
 
 .subtext {
 
