--- a/portfolio.css
+++ b/portfolio.css
@@ -56,7 +56,7 @@ p {
 
 .content {
     height: 1000px;
-    background-color: #f4f4f4;
+    -color: #f4f4f4;
     padding: 20px;
 }
 .container {
@@ -66,7 +66,7 @@ p {
 }
 
 header {
-    background-color: #fff;
+    -color: #fff;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
 
@@ -99,7 +99,7 @@ header {
     left: -300px;  /* Change from right: -300px to left: -300px */
     width: 300px;
     height: 100vh;
-    background-color: rgba(255, 255, 255, 0.76);
+    background-color: rgba(251, 251, 251, 0.913);
     transition: left 0.3s ease-in-out;  /* Change from right to left */
     z-index: 1000;
 }
