--- a/portfolio.css
+++ b/portfolio.css
@@ -117,19 +117,18 @@ header {
 }
 
 .nav-menu ul li {
-    padding: 10px 40px;
+    padding: 20px 40px;
 }
 
 .nav-menu ul li a {
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: xx-large;
     font-stretch: expanded;
     font-weight: bold;
-    color: white;
+    color: rgb(87, 85, 85);
     text-decoration: none;
     font-size: 18px;
 }
-
 
 .hero {
     text-align: center;
