--- a/portfolio.css
+++ b/portfolio.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Raleway', sans-serif;
     line-height: 1.6;
-    color: #333;
+    color: #ffffff;
     background-color: #141519;
 }
 
@@ -10,9 +10,10 @@ body, html {
     margin: 0;
     font-family: Arial, sans-serif;
 }
-{
+* {
     box-sizing: border-box;
 }
+
 
 .parallax {
     height: 100vh;
@@ -56,7 +57,8 @@ p {
 
 .content {
     height: 1000px;
-    -color: #f4f4f4;
+    background-color: #f4f4f4;
+
     padding: 20px;
 }
 .container {
@@ -122,7 +124,6 @@ header {
 
 .nav-menu ul li a {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: xx-large;
     font-stretch: expanded;
     font-weight: bold;
     color: rgb(87, 85, 85);
@@ -175,7 +176,7 @@ header {
 }
 
 #contact h2 {
-    color: #827070;
+    color: #ffffff;
     font-family: Verdana;
     font-size: 2.5em;
     margin-bottom: 20px;
@@ -247,7 +248,7 @@ header {
         font-size: 1em;
         padding: 10px;
     }
-
+}
 
 
 
@@ -257,7 +258,8 @@ header {
     grid-template-columns: repeat(4, 1fr);
     gap: 2rem;
     padding: 4rem 2rem;
-    background-color: 141519; /* Rich blue background */
+   background-color: #141519;
+
     color: white;
 }
 
