--- a/calendarstyle.css
+++ b/calendarstyle.css
@@ -135,7 +135,7 @@ color: 475346;
 }
 
 .day {
-    background-image: url('daypng.png');
+    background-image: url('heart.png');
       background-size: cover;  /* Add this to ensure image fills the container */
     background-position: center;  /* Add this to center the image */
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
