--- a/portfolio.css
+++ b/portfolio.css
@@ -424,3 +424,33 @@ header {
         font-size: 2.5rem;
     }
 }
+
+    footer {
+    padding: 2rem;
+    text-align: center;
+    background-color: #141519;
+    color: white;
+}
+
+.social-links {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    margin-top: 1rem;
+}
+
+.social-icon {
+    width: 24px;
+    height: 24px;
+    transition: transform 0.3s ease;
+}
+
+.social-icon:hover {
+    transform: translateY(-3px);
+}
+
+.social-links a {
+    color: white;
+    text-decoration: none;
+}
+
