--- a/portfolio.css
+++ b/portfolio.css
@@ -52,7 +52,7 @@ html {
     left: 10%;
     transform: translateY(-50%);
     color: white;
-    text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+    font-style: italic;
     z-index: 1;
 }
 
