--- a/portfolio.css
+++ b/portfolio.css
@@ -31,11 +31,13 @@ body {
 
 .text-overlay {
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
     z-index: 1;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+
     
 }
 
