--- a/portfolio.css
+++ b/portfolio.css
@@ -97,11 +97,26 @@ body {
     transition: color 0.3s ease;
 }
 
+
+
+
+
 /* Sections */
 #home, #about {
     padding: 60px 20px;
     text-align: center;
+     opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
 }
+home.animate, #about.animate {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+
+
+
 
 .services-container {
     display: grid;
